<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/pref_data_title">
        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="auto_upload"
            android:title="@string/pref_automatic_upload_title" />
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="upload_wifi"
            android:dependency="auto_upload"
            android:summaryOn="@string/pref_automatic_upload_wifi_only_summary_on"
            android:summaryOff="@string/pref_automatic_upload_wifi_only_summary_off"
            android:title="@string/pref_automatic_upload_wifi_only_title" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_recording_title">

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="activity_recognition"
            android:summaryOn="@string/pref_activity_recognition_summary_on"
            android:summaryOff="@string/pref_activity_recognition_summary_off"
            android:title="@string/pref_activity_recognition_title" />

        <Preference android:title="@string/pref_bluetooth_device_title"
            android:summary="@string/pref_bluetooth_device_summary_off"
            android:defaultValue="-1"
            android:entries="@array/pref_example_list_titles"
            android:entryValues="@array/pref_example_list_values"
            android:key="bluetooth_list" />


        <Preference
            android:title="@string/pref_recording_deadzone_title"
            android:summary="@string/pref_recording_deadzone_summary">

        </Preference>

    </PreferenceCategory>


</PreferenceScreen>
