<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorAccent">

    <ImageView
        android:id="@+id/iv_road"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_margin="10dp"
        android:layout_centerInParent="true"
        app:srcCompat="@drawable/road_variant_white_96dp"
        android:transitionName="launcher"
        android:contentDescription="@string/content_desc_road_image"/>

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:layout_centerHorizontal="true"
            android:layout_above="@+id/iv_road"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/iv_road"
            android:text="@string/app_tagline"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"/>

</RelativeLayout>