<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="96dp">


    <View
        android:id="@+id/view_trip_line_top"
        android:layout_width="8dp"
        android:layout_height="48dp"
        android:background="@color/colorBlue"
        app:layout_constraintBottom_toTopOf="@+id/view_trip_line_bottom"
        app:layout_constraintEnd_toEndOf="@+id/view_trip_line_circle"
        app:layout_constraintStart_toStartOf="@+id/view_trip_line_circle"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view_trip_line_bottom"
        android:layout_width="8dp"
        android:layout_height="48dp"
        android:background="@color/colorBlue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/view_trip_line_circle"
        app:layout_constraintStart_toStartOf="@+id/view_trip_line_circle" />

    <View
        android:id="@+id/view_trip_line_circle_big"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/background_trip_line_circle_big"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:visibility="invisible"
        android:id="@+id/view_trip_line_circle"
        android:layout_width="8dp"
        android:layout_height="8dp"
        android:layout_marginLeft="28dp"
        android:layout_marginStart="28dp"
        android:background="@drawable/background_trip_line_circle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tv_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:text="@string/placeholder_date"
        android:textColor="@android:color/primary_text_dark"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/view_trip_line_circle"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/aligner_view_1"
        android:layout_width="10dp"
        android:layout_height="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tv_time"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/placeholder_time"
        android:textColor="@android:color/primary_text_dark"
        app:layout_constraintBottom_toTopOf="@+id/aligner_view_1"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_points"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/placeholder_points"
        android:textColor="@android:color/primary_text_dark"
        app:layout_constraintEnd_toEndOf="@+id/tv_time"
        app:layout_constraintTop_toBottomOf="@+id/aligner_view_1" />

    <View
        android:id="@+id/bottom_divider_line"
        android:layout_width="wrap_content"
        android:layout_height="1px"
        android:background="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_date" />

</android.support.constraint.ConstraintLayout>